  (ygrek, review by Gabriel Scherer)

- GPR#984: Fix compilation of compiler distribution when Spacetime
  enabled
  (Mark Shinwell)

- GPR#991: On Windows, fix installation when native compiler is not
  built
  (Sébastien Hinderer, review by David Allsopp)

- GPR#803: new ocamllex-based tool to extract bytecode compiler
  opcode information from C headers.
  (Nicolas Ojeda Bar)

### Internal/compiler-libs changes:

- GPR#673: distinguish initialization of block fields from mutation in lambda.
  (Frédéric Bour, review by Xavier Leroy, Stephen Dolan and Mark Shinwell)

- GPR#744, GPR#781: fix duplicate self-reference in imported cmi_crcs
  list in .cmti files + avoid rebuilding cmi_info record when creating
  .cmti files
  (Alain Frisch, report by Daniel Bunzli, review by Jeremie Dimino)
- GPR#915: fix -dsource (pprintast.ml) bugs
  (Runhang Li, review by Alain Frisch)

- GPR#832, MPR#7357: Improve compilation time for toplevel
  include(struct ... end : sig ... end)
  (Alain Frisch, report by Hongbo Zhang, review by Jacques Garrigue)

- GPR#881: change `Outcometree.out_variant` to be more general.
  `Ovar_name of out_ident * out_type list` becomes `Ovar_type of out_type`.
  (Valentin Gatien-Baron)

- GPR#908: refactor PIC-handling in the s390x backend
  (Gabriel Scherer)

- GPR#1027: various improvements to -dtimings, mostly including time
  spent in subprocesses like preprocessors
  (Valentin Gatien-Baron, review by Gabriel Scherer)

### Bug fixes

- PR#5115: protect all byterun/fail.c functions against
  uninitialized caml_global_data (only changes the bytecode behavior)
  (Gabriel Scherer, review by Xavier Leroy)

- PR#7216, GPR#949: don't require double parens in Functor((val x))
  (Jacques Garrigue, review by Valentin Gatien-Baron)

- PR#7414, GPR#929: Soundness bug with non-generalized type variable and functor
  (Jacques Garrigue, report by Leo White)

- PR#7421: Soundness bug with GADTs and lazy
  (Jacques Garrigue, report by Leo White)
