@@ -1,7 +1,7 @@
 Now starting the OCaml engine.
 Main is running.
-Loading ../../../otherlibs/win32unix/unix.cma
-Loading ../../../otherlibs/bigarray/bigarray.cma
+Loading unix.cma
+Loading bigarray.cma
 Loading plugin.cmo
 I'm the plugin.
 OK.
