@@ -1,5 +1,5 @@
 let load s =
-  Printf.printf "Loading %s\n%!" s;
+  Printf.printf "Loading %s\n%!" (Filename.basename s);
   try
     Dynlink.loadfile s
   with Dynlink.Error e ->
@@ -15,8 +15,8 @@ let () =
   Dynlink.init ();
   Dynlink.allow_unsafe_modules true;
   let s1,s2,s3 =
-    Dynlink.adapt_filename "../../../otherlibs/win32unix/unix.cma",
-    Dynlink.adapt_filename "../../../otherlibs/bigarray/bigarray.cma",
+    Dynlink.adapt_filename (Filename.concat (Sys.getenv "UNIX_LIB_DIR") "unix.cma"),
+    Dynlink.adapt_filename (Filename.concat (Sys.getenv "BIGARRAY_LIB_DIR") "bigarray.cma"),
     Dynlink.adapt_filename "plugin.cmo"
   in
   load s1;
