@@ -1,7 +1,7 @@
 Now starting the OCaml engine.
 Main is running.
-Loading ../../../otherlibs/win32unix/unix.cmxs
-Loading ../../../otherlibs/bigarray/bigarray.cmxs
+Loading unix.cmxs
+Loading bigarray.cmxs
 Loading plugin.cmxs
 I'm the plugin.
 OK.
