@@ -15,9 +15,15 @@
 
 BASEDIR=../..
 LIBRARIES=unix threads
+
+ifeq "$(wildcard $(BASEDIR)/../config/Makefile)" ""
+ADD_COMPFLAGS=-thread
+LD_PATH=$(TOPDIR)/stublibs
+else
 ADD_COMPFLAGS=-thread -I $(OTOPDIR)/otherlibs/systhreads \
 	      -I $(OTOPDIR)/otherlibs/$(UNIXLIBVAR)unix
 LD_PATH=$(TOPDIR)/otherlibs/systhreads:$(TOPDIR)/otherlibs/$(UNIXLIBVAR)unix
+endif
 
 include $(BASEDIR)/makefiles/Makefile.several
 include $(BASEDIR)/makefiles/Makefile.common
