@@ -15,6 +15,10 @@
 
 CONFIG=../../../config/Makefile
 
+if ! test -e $CONFIG ; then
+  CONFIG=../../../Makefile.config
+fi
+
 case `grep '^SYSTEM=' $CONFIG` in
   SYSTEM=bsd_elf) exit 3;;
 esac
