@@ -234,6 +234,10 @@ Next version (4.05.0):
   opcode information from C headers.
   (Nicolas Ojeda Bar)
 
+- GPR#1024: allow testsuite to be installed to test installations instead of
+  build trees.
+  (David Allsopp)
+
 ### Internal/compiler-libs changes:
 
 - GPR#673: distinguish initialization of block fields from mutation in lambda.
